# libmoonmic

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  INTEGRATION.md  LICENSE  README.md  heartbeat_monitor.h  moonmic.h  moonmic_client.cpp  moonmic_debug.h  moonmic_internal.h
codec/: opus_encoder.cpp  speex_resampler.cpp
examples/: integration_example.cpp
host/: CMakeLists.txt  QUICKSTART.md  README.md
host/build-windows/opus/: config.h
host/config/: moonmic-host.json.example
host/drivers/: README.md
host/drivers/SVACDriver/: README.md
host/drivers/vbaudio/: README.md
host/guardian/: main.cpp  main_minimal.cpp
host/scripts/: build_hosts.sh
host/src/: audio_receiver.cpp  audio_receiver.h  config.cpp  config.h  debug.h  debug_gui.cpp  debug_gui.h  display_manager.cpp  display_manager.h  display_settings_gui.cpp  display_settings_gui.h  guardian_launcher.cpp  guardian_launcher.h  guardian_state.cpp  guardian_state.h  gui_helper.cpp  gui_helper.h  logger.h  main.cpp  single_instance.cpp  single_instance.h  sunshine_integration.cpp  sunshine_integration.h  sunshine_settings_gui.cpp  sunshine_settings_gui.h  sunshine_webui.cpp  sunshine_webui.h  version.h.in  version_checker.cpp  version_checker.h
host/src/codec/: ffmpeg_decoder.cpp  ffmpeg_decoder.h  opus_decoder.cpp  opus_decoder.h
host/src/network/: connection_monitor.cpp  connection_monitor.h  udp_receiver.cpp  udp_receiver.h
host/src/platform/: virtual_device.h
host/src/platform/linux/: virtual_device_linux.cpp
host/src/platform/portaudio/: virtual_device_pa.cpp  virtual_device_pa.h
host/src/platform/windows/: audio_device_manager.cpp  audio_device_manager.h  audio_utils.cpp  audio_utils.h  driver_installer.cpp  driver_installer.h  resources.rc  virtual_device_win.cpp
network/: udp_sender.cpp
platform/linux/: audio_capture_linux.cpp  heartbeat_monitor.cpp  platform_config.h
platform/psvita/: audio_capture_vita.cpp  heartbeat_monitor.cpp  platform_config.h
platform/windows/: audio_capture_windows.cpp  heartbeat_monitor.cpp  platform_config.h
